--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/material": "^5.12.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
